# EpiGimp-SIMULATED-

./: .gitignore  .valgrind.supp  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TEST_BASIC_RENDERING.md  TEST_SUMMARY.md
.github/: WORKFLOWS.md
.github/workflows/: comprehensive-tests.yml  cross-platform-tests.yml  memory-analysis.yml  memory-check-simple.yml  performance-tests.yml  simple-test.yml  smoke-tests.yml  test-matrix.yml  tests.yml
include/: Basics.hpp  Init.hpp  Open_Save.hpp  basics.hpp
include/Class/: CanvasClass.hpp  ErrorClass.hpp  ImageClass.hpp  PaintInterfaceClass.hpp  ToolbarClass.hpp
include/Commands/: ClearCommand.hpp  DeleteSelectionCommand.hpp  DrawCommand.hpp  FlipSelectionCommands.hpp  LayerCommands.hpp
include/Core/: Application.hpp  EventSystem.hpp  HistoryManager.hpp  ICommand.hpp  Interfaces.hpp  Layer.hpp  LayerManager.hpp  RaylibWrappers.hpp
include/UI/: Canvas.hpp  LayerPanel.hpp  SimpleLayerPanel.hpp  Toolbar.hpp
include/Utils/: FileBrowser.hpp  FileDialogs.hpp  Implementations.hpp
src/: init_raylib_window.cpp  main.cpp
src/Commands/: ClearCommand.cpp  DeleteSelectionCommand.cpp  DrawCommand.cpp  FlipSelectionCommands.cpp  LayerCommands.cpp
src/Core/: Application.cpp  ApplicationCore.cpp  ApplicationEvents.cpp  ApplicationLoop.cpp  EventSystem.cpp  HistoryManager.cpp  Layer.cpp  LayerManager.cpp  RaylibWrappers.cpp
src/UI/: Canvas.cpp  CanvasCore.cpp  CanvasDrawing.cpp  CanvasImageOps.cpp  CanvasInput.cpp  CanvasSelection.cpp  CanvasTransform.cpp  LayerPanel.cpp  SimpleLayerPanel.cpp  Toolbar.cpp  ToolbarButtons.cpp  ToolbarColors.cpp  ToolbarCore.cpp
src/Utils/: ConsoleErrorHandler.cpp  FileBrowser.cpp  FileBrowser.cpp.backup  FileBrowserCore.cpp  FileBrowserDialogs.cpp  FileBrowserNavigation.cpp  FileDialogs.cpp  RaylibInputHandler.cpp  SimpleFileManager.cpp
src/canvas/: canvas_impl.cpp
src/interface/: paint_interface.cpp
src/open_save_funcs/: open_exec.cpp
src/toolbar/: toolbar_impl.cpp
tests/: README.md  test_basic.cpp  test_brush_tool.cpp  test_canvas_layers.cpp  test_canvas_utils.cpp  test_color_palette.cpp  test_dual_color_system.cpp  test_file_utils.cpp  test_globals.hpp  test_history.cpp  test_history_comprehensive.cpp  test_layer_draw_commands.cpp  test_layer_system.cpp  test_main.cpp  test_simple.cpp
